<?xml version="1.0" encoding="utf-8"?>
<!--
    Orange Baah Box
    Copyright (C) 2017 – 2019 Orange SA

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/clSheepGamePlaying"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".ui.fragments.GameSheepFragment">

    <!-- Game details -->

    <TextView
            android:id="@+id/tvLine0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/game_sheep_line0_text_size"
            android:textStyle="normal"
            android:typeface="sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvLine1"
            android:text="@string/game_sheep_instructions_line_1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/game_sheep_line1_text_size"
            android:textStyle="bold"
            android:typeface="sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/game_sheep_line1_margin_start"
            android:layout_marginTop="@dimen/game_sheep_line1_margin_top"
            android:layout_marginBottom="@dimen/game_sheep_line1_margin_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/ivGameSheepFloor" />

    <TextView
            android:id="@+id/tvLine2"
            android:text="@string/game_sheep_instructions_line_2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/game_sheep_line2_text_size"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/game_sheep_line2_margin_start"
            android:layout_marginTop="@dimen/game_sheep_line2_margin_top"
            android:layout_marginBottom="@dimen/game_sheep_line2_margin_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLine1"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Bang! -->

    <ImageView
            android:id="@+id/ivGameSheepBang"
            android:src="@mipmap/ic_sheep_bang"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/game_sheep_image_bang_margin_start"
            android:layout_marginEnd="@dimen/game_sheep_image_bang_margin_end"
            android:layout_marginTop="@dimen/game_sheep_image_bang_margin_top"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- The floor -->

    <ImageView
            android:id="@+id/ivGameSheepFloor"
            android:src="@mipmap/ic_sheep_floor"
            android:layout_width="@dimen/game_sheep_floor_width"
            android:layout_height="@dimen/game_sheep_floor_height"
            android:layout_marginTop="@dimen/game_sheep_floor_margin_top"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- Replay button -->

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRestart"
            android:text="@string/btn_restart"
            android:textSize="24sp"
            android:background="@color/purple"
            android:elevation="0dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/game_sheep_btn_play_margin_start_stop"
            android:layout_marginEnd="@dimen/game_sheep_btn_play_margin_start_stop"
            android:layout_marginBottom="@dimen/game_sheep_btn_play_margin_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="@color/pink"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>